# sweb

./: .clang-format  .clangd  .editorconfig  .gitignore  .hgignore  .travis.yml  CMakeLists.txt  INSTALL  MakeOptions  Makefile  Makefile.subdir  README.md  format-all.sh  relocate_project.sh  setup_cmake.sh
arch/: CMakeLists.txt
arch/arm/: CMakeLists.include  CMakeLists.txt  CMakeLists.userspace
arch/arm/include/: ArchInterrupts.h  ArchMemory.h  ArchThreads.h  InterruptUtils.h  arch_bd_ata_driver.h  arch_bd_driver.h  arch_bd_ide_driver.h  arch_bd_io.h  arch_bd_virtual_device.h  arch_keyboard_manager.h  arch_mmc_driver.h  atkbd.h  boot-time.h  offsets.h  paging-definitions.h  ports.h
arch/arm/integratorcp/: CMakeLists.compiler  CMakeLists.include  CMakeLists.subfolders  CMakeLists.txt  CMakeLists.userspace
arch/arm/rpi/: CMakeLists.compiler  CMakeLists.include  CMakeLists.subfolders  CMakeLists.txt  CMakeLists.userspace
arch/arm/rpi2/: CMakeLists.compiler  CMakeLists.include  CMakeLists.subfolders  CMakeLists.txt  CMakeLists.userspace
arch/arm/source/: ArchCommon.cpp  ArchInterrupts.cpp  ArchMemory.cpp  ArchThreads.cpp  CMakeLists.txt  InterruptUtils.cpp  SegmentUtils.cpp  arch_backtrace.cpp  arch_bd_ata_driver.cpp  arch_bd_ide_driver.cpp  arch_keyboard_manager.cpp  arch_mmc_driver.cpp  arch_serial.cpp  arch_serial_manager.cpp  assert.cpp  backtrace.cpp  boot.s  debug_bochs.cpp  init_boottime_pagetables.cpp  panic.cpp
arch/arm/userspace/: start.s  syscalls.s
arch/arm/utils/: kernel-ld-script.ld
arch/arm/verdex/: CMakeLists.compiler  CMakeLists.include  CMakeLists.subfolders  CMakeLists.userspace
arch/armv8/: CMakeLists.txt
arch/armv8/rpi3/: CMakeLists.compiler  CMakeLists.include  CMakeLists.subfolders  CMakeLists.userspace
arch/common/include/: ArchCommon.h  ArchInterrupts.h  ArchMemory.h  ArchSerialInfo.h  ArchThreads.h  BDDriver.h  BDManager.h  BDRequest.h  BDVirtualDevice.h  Elf32Format.h  Elf64Format.h  IDEDriver.h  KeyboardManager.h  MasterBootRecord.h  StorageManager.h  XenConsole.h  arch_backtrace.h  arch_bd_manager.h  arch_bd_request.h  arch_bd_virtual_device.h  arch_keyboard_manager.h  assert.h  boot-time.h  debug_bochs.h  panic.h
arch/common/source/: BDManager.cpp  BDVirtualDevice.cpp  CMakeLists.txt  panic.cpp
arch/x86/: CMakeLists.include  CMakeLists.txt  Makefile
arch/x86/32/: CMakeLists.compiler  CMakeLists.include  CMakeLists.subfolders  CMakeLists.txt  CMakeLists.userspace
arch/x86/64/: CMakeLists.compiler  CMakeLists.include  CMakeLists.txt  CMakeLists.userspace
arch/x86/include/: 8259.h  ArchMemory.h  ElfFormat.h  InterruptUtils.h  SegmentUtils.h  arch_bd_ata_driver.h  arch_bd_driver.h  arch_bd_ide_driver.h  arch_bd_io.h  arch_bd_manager.h  arch_bd_request.h  arch_bd_virtual_device.h  arch_interrupts.h  arch_keyboard_manager.h  arch_panic.h  arch_serial.h  atkbd.h  backtrace.h  boot-time.h  debug_bochs.h  multiboot.h  offsets.h  paging-definitions.h  panic.h  ports.h  structures.h  types.h
arch/x86/pae/: CMakeLists.include  CMakeLists.userspace
arch/x86/source/: 8259-hack-for-strange-bug.cpp  8259.cpp  ArchCommon.cpp  ArchInterrupts.cpp  ArchMemory.cpp  ArchThreads.cpp  CMakeLists.txt  InterruptUtils.cpp  Makefile  SegmentUtils.cpp  StorageManager.cpp  arch_bd_ata_driver.cpp  arch_bd_ide_driver.cpp  arch_bd_manager.cpp  boot.s  (+20 more)
arch/x86_64/: CMakeLists.include  CMakeLists.userspace
arch/x86_pae/: CMakeLists.include  CMakeLists.txt  CMakeLists.userspace
arch/xen/: CMakeLists.include  CMakeLists.subfolders  CMakeLists.txt  archlink.sh
common/: CMakeLists.txt
common/source/: CMakeLists.txt
lib/: CMakeLists.txt
lib/EASTL_userconfig/: eastl_userconfig.h
userspace/libc/: CMakeLists.txt  Makefile
userspace/tests/: CMakeLists.txt  Makefile  helloworld.c  helloworld.cpp  helloworldloop.c  memtest.c  mult.c  read.c  shell.c  shell.cpp  start.c  stdin-test.c  stdout-test.c  syscalls.s
utils/: CMakeLists.txt  gdbinit  mount.sh  prompt.sh  travis_test.sh  umount.sh
utils/add-debug/: CMakeLists.txt  Makefile  add-dbg.cc  add-dbg.sh
utils/bochs/: bochs_2.3.7_page_fault.patch  bochs_page_fault.patch  bochsrc  bochsrc.pattern  bochsrc.ubuntu
utils/e2fsimage/: Local.mak  Makefile  configure  copy.c  dirent.c  e2fsimage  e2fsimage.h  initfs.c  inodb.c  main.c  mkdir.c  mke2fs.c  passwd.c  sfile.c  symlink.c  uiddb.c  uids.c  util.c
utils/exe2minixfs/: Bitmap.cpp  Bitmap.h  Buffer.cpp  Buffer.h  CMakeLists.txt  Dentry.cpp  Dentry.h  File.h  FileDescriptor.cpp  FileDescriptor.h  FileSystemInfo.cpp  FileSystemInfo.h  Inode.cpp  Inode.h  MinixFSFile.cpp  MinixFSFile.h  MinixFSInode.cpp  MinixFSInode.h  MinixFSSuperblock.cpp  MinixFSSuperblock.h  MinixFSTypes.h  MinixFSZone.cpp  MinixFSZone.h  MinixStorageManager.cpp  MinixStorageManager.h  Mutex.h  PathWalker.cpp  PathWalker.h  PointList.h  ScopeLock.h  StorageManager.cpp  StorageManager.h  Superblock.cpp  Superblock.h  VfsSyscall.cpp  VfsSyscall.h  exe2minixfs.cpp  kprintf.h  kstring.h  main.cpp  (+3 more)
utils/exe2pseudofs/: CMakeLists.txt  Makefile  exe2pseudofs.cpp  exe2pseudofs.h
utils/exe2str/: Makefile  exe2str.hs  finite-loop.c  finite-loop2.c  someloop.c  stdout-test.c
utils/gdb/: gdbinit
utils/images/: extract_image.sh  menu.lst  menu.lst.hda  nvram  resize_power2.sh  sweb.vmx
utils/mkminixfs/: CMakeLists.txt  mkminixfs.cpp
utils/mtools/: Makefile  buffer.c  codepage.c  codepage.h  codepages.c  config.c  config.h  copyfile.c  devices.c  devices.h  dirCache.c  dirCache.h  direntry.c  fat.c  fat_free.c  file.c  file.h  file_name.c  filter.c  floppyd_io.c  floppyd_io.h  force_io.c  fs.h  fsP.h  getopt.h  init.c  llong.c  llong.h  lockdev.h  mainloop.c  mainloop.h  match.c  mattrib.c  mbadblocks.c  mcat.c  mcd.c  mclasserase.c  mcopy.c  mdel.c  mdir.c  (+30 more)
utils/qemu/: qemu-0.11.1-debug-info-0xe9.patch  qemu-0.12.3-debug-info-0xe9.patch  qemu-debug-info-0xe9.patch
utils/sweb-img-util/: CMakeLists.txt  ImageInfo.cpp  ImageInfo.h  Main.cpp  PartitionInfo.cpp  PartitionInfo.h  Program.cpp  Program.h  Thread.cpp  Thread.h  Util.cpp  Util.h  debug_print.cpp  debug_print.h
(+1096 files in other folders)
